--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         </table>
     </div>
-    <div class="container-md bg-light  ">
+    <div class="container-md bg-light">
         <div class="row d-flex m-4 ">
             <div class="col-4 p-2 mb-3 border border-danger ">
                 <div class="container-fluid bg-info mb-3 ">
@@ -39,16 +39,18 @@
                             placeholder="Description"></textarea>
                     </div>
                     <select name="" id="statut">
-                        <option class="valueOptionSelect" value="">Choisir</option>
-                        <option class="valueOptionSelect" value="terminer" id="finish">Terminer</option>
+                        <option class="valueOptionSelect" disabled value="" placeholder="statut">selectionnez un statut</option>
+                        <option class="valueOptionSelect" value="nouveau" id="finish">Nouveau</option>
                         <option class="valueOptionSelect" value="en-cours">En cours </option>
-                        <option class="valueOptionSelect" value="fini">Fini</option>
+                        <option class="valueOptionSelect" value="terminer">terminée</option>
                     </select>
                 </div>
 
                 <button type="button" class="boutton_submit btn btn-primary mt-3 w-75" id="boutton">Enregistrer</button>
                 
-                <div id="blocBtn"></div>
+                <div id="blocBtn">
+                    <button type="button" id="boutton_edit" class="boutton_edit btn btn-primary mt-3 w-75 ">Modifier</button>
+                </div>
 
                 <hr class="">
                 <div class=" w-auto h-75 top-50 start-50 mt-3 text-center "><span class="">Statut</span>
