--- a/essai.html
+++ b/essai.html
@@ -1,51 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modal avec Tableau</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-          integrity="sha384-rbs5cDo0gA+A/IlxFl/gyzgjL4Ij7JfQpgJ8qE4e9GOp1aFteL8Gq1dd8Fq5CVIU" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-Mbm5luuBiqF0RWtIoICa6bN6QUpnIErVTHd0IBbUJNAwiYt5PlALdFhMpheJ3hiS"
+        crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
+    <title>to do list</title>
 </head>
-<body>
 
-<div class="modal" tabindex="-1">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title">Information Tâche</h5>
+<body class="bg-warning">
+
+    <div id="info_modal" class="row col-3 m-auto bg-light position-absolute top-50 start-50 translate-middle">
+        <table class="table table-info-td d-flex justify-content-center border border-2 di">
+        </table>
+    </div>
+
+    <div class="container-md bg-light">
+        <div class="row d-flex m-4 ">
+            <div class="col-md-4 p-2 mb-3 border border-danger ">
+                <div class="container-fluid bg-info mb-3 ">
+                    Ajouter une tache
+                </div>
+                <div class="form">
+                    <input class="input1 form-control form-control-sm mb-3" type="text" placeholder="categorie"
+                        aria-label=".form-control-sm example">
+                    <input class="input2 form-control form-control-sm mb-3" type="text" placeholder="titre"
+                        aria-label=".form-control-sm example">
+                    <input class="input3 addTaches form-control form-control-sm mb-3" type="date"
+                        aria-label=".form-control-sm example">
+                    <div class="addTaches mb-3">
+                        <textarea class="descript form-control" id="exampleFormControlTextarea1" rows="1"
+                            placeholder="Description"></textarea>
+                    </div>
+                    <select class="form-select mb-3" name="" id="statut">
+                        <option class="valueOptionSelect" disabled value="" placeholder="statut">Sélectionnez un statut
+                        </option>
+                        <option class="valueOptionSelect" value="nouveau" id="finish">Nouveau</option>
+                        <option class="valueOptionSelect" value="en-cours">En cours</option>
+                        <option class="valueOptionSelect" value="terminer">Terminée</option>
+                    </select>
+                </div>
+
+                <button type="button" class="boutton_submit btn btn-primary mt-3 w-75" id="boutton">Enregistrer</button>
+
+                <div id="blocBtn">
+                    <button type="button" id="boutton_edit" class="boutton_edit btn btn-primary mt-3 w-75 ">Modifier
+                    </button>
+                </div>
+
+                <hr class="">
+                <div class="w-auto h-75 top-50 start-50 mt-3 text-center ">
+                    <span class="">Statut</span>
+                    <div class="chartMenu">
+                        <p> <span id="chartVersion"></span></p>
+                    </div>
+                    <div class="chartBox">
+                        <canvas id="myChart"></canvas>
+                    </div>
+                </div>
             </div>
-            <div class="modal-body">
-                <table class="table table-borderless">
+            <div class="col-md-8 ">
+                <div class="text-center fs-5 mt-3 mb-3">
+                    Liste de Taches
+                </div>
+                <table class="table table-borderless overflow-scroll vh-">
                     <thead>
-                        <tr>
-                            <th>Colonne 1</th>
-                            <th>Colonne 2</th>
+                        <tr class="bg-secondary">
+                            <th scope="col">#</th>
+                            <th scope="col">Date</th>
+                            <th scope="col">Titre</th>
+                            <th scope="col">Categorie</th>
+                            <th scope="col">Operation</th>
                         </tr>
                     </thead>
-                    <tbody>
-                        <tr>
-                            <td>Donnée 1-1</td>
-                            <td>Donnée 1-2</td>
-                        </tr>
-                        <tr>
-                            <td>Donnée 2-1</td>
-                            <td>Donnée 2-2</td>
-                        </tr>
-                        <!-- Ajoutez d'autres lignes selon vos besoins -->
+                    <tbody class="tableBody">
+                        <!-- tableau d'ajout d'un taches -->
                     </tbody>
                 </table>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fermer</button>
-                <button type="button" class="btn btn-primary">Enregistrer</button>
+                <hr>
+                <h4 class="text-center">Description </h4>
+                <div id="decript_set" class="text-start text-dark border border-dark h-25 m-2 p-2 " val>
+                </div>
             </div>
         </div>
     </div>
-</div>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/chart.js/dist/chart.umd.min.js"></script>
+    <script src="script.js"></script>
+    <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-1q8gIEjh5eBDJ9DPm9GWSiPy5HddXq6i0zD0/POInIqGWJowAgKgWCIK3OBiK29Z"
         crossorigin="anonymous"></script>
 </body>
+
 </html>
